# circlepacking

code/: CMakeLists.txt  LICENSE  prover.cpp  subintervals.hpp
code/algcuda/: UseCUDA.cmake
code/algcuda/cuda-cpp-wrapper/include/algcuda/: device.hpp  error.hpp  memory.hpp  properties.hpp
code/algcuda/cuda-cpp-wrapper/src/: device.cpp  error.cpp  memory.cpp  properties.cpp
code/algcuda/cuda-utils/cpp/include/algcuda/: atomic_float.hpp  interval.hpp  macros.hpp
code/algcuda/cuda-utils/cuh/include/algcuda/: exit.cuh  interval.cuh  vector.cuh
code/cmake/: util.cmake
code/lane_packing/: collision_angles.cu  end_configuration.cu  lane_packing.cu  lower_bound_radius_single_placement.cu  middle_configuration.cu  operations.cuh  run_kernel.cuh  start_configuration.cu  values.hpp
